tests/files/type_checker_tests/should_pass/248.cmdr
//Test that lambdas type check
add = fn (a:int, b: float): float -> { 
    return a + b;
};
add(2, 3.5);
x = add(3, 3.4);
